--- a/demos/hello-world/index.html
+++ b/demos/hello-world/index.html
@@ -2,77 +2,62 @@
 <html lang="en">
 
 <head>
-    <title>iVXjs Hello World</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>iVXjs Hello World</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/core.css">
+	<link rel="stylesheet" type="text/css" href="css/basic-style.css">
+	
 
 </head>
 
 <body ng-app="app">
 
-    <div id="ivx"></div>
+	<div id="ivx"></div>
 
-    <!-- Optional jQuery dependency (Must come first) -->
-    <!-- script src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script> -->
+	<!-- Optional jQuery dependency (Must come first) -->
+	<!-- script src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script> -->
 
-    <!-- Angular -->
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js'></script>
+	<!-- Angular -->
+	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js'></script>
 
-    <!-- Angular UI Router -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0-alpha.5/angular-ui-router.js'></script>
+	<!-- Angular UI Router -->
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0-alpha.5/angular-ui-router.js'></script>
 
-    <!-- ngSanitize -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.6/angular-sanitize.min.js'></script>
+	<!-- ngSanitize -->
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.6/angular-sanitize.min.js'></script>
 
-    <!-- Angular iVXjs Library -->
-    <script src="js/lib/angular.ivx.js"></script>
+	<script src='https://www.youtube.com/iframe_api'></script>
 
-    <script>
-        angular
-        .module('app', ['ivx-js'])
-        .run(['iVXjs', function(iVXjs){
-            iVXjs.init({
-                "config" : {
-						"defaultState": [{
-							"stateId": "hello-world"
-						}],
-						"states": [{
-							"id": "hello-world",
-							"name": "Hello World",
-							"url": "/hello-world",
-							"type": "input",
-							"header": {
-								"html" : "<h1>Welcome to iVXjs!</h1><h2>Write in your name below so we can get to know you.</h2>"
-							},
-							"footer": {
-								"html" : ""
-							},
-							"onEnter":[],
-							"onExit": [],
-							"next": [{
-								"stateId" : "welcome-screen"
-							}],
-							"onSubmit": [],
-							"inputs": [{
-								"id": "name",
-								"type": "text",
-								"name" : "username",
-								"user" : true
-								"label" : "Your Name:"           
-							}]
-						},{
-							"id" : "welcome-screen",
-							"name" : "Welcome Screent",
-							"url" : "/welcome-screen",
-							"type" : "html",
-							"html" : "<div class=\"welcome\"><h1>Congratulations {{experience.name}}!</h1><h2>You made your first iVXjs Experience!</h2></div>"
+	<!-- Angular iVXjs Library -->
+	<script src="js/lib/angular.ivx.js"></script>
 
-						}]
-					}	
-            	});
-        	}])     
-    </script>
+	<script>
+            angular
+                .module('app', ['ivx-js'])
+                .config(['iVXjs', function(iVXjs){
+                    iVXjs.init({
+                        config : "data/hello-world.json"
+                    });
+                }]);
+        </script>
+
+	<!-- Angular Templates -->
+
+	<!-- Form Header Template -->
+	<script type="text/ng-template" id="form-header.html">
+            <h1>Welcome to an iVXjs Sample Experience</h1>
+        </script>
+
+	<!-- Name Personalization Template -->
+	<script type="text/ng-template" id="name-personalization.html">
+            <h1>{{ "{{ experience.fullName " }}}}</h1>
+        </script>
+
+	<!-- Helpful Links Header Template -->
+	<script type="text/ng-template" id="helpful-links-header.html">
+            <h1>Now that you have seen it {{ "{{ experience.fullName " }}}}, create an experience of your own!</h1>
+        </script>
 
 </body>
-
 </html>
