--- a/demos/hello-world/index.html
+++ b/demos/hello-world/index.html
@@ -16,7 +16,7 @@
 	<div id="ivx"></div>
 
 	<!-- Optional jQuery dependency (Must come first) -->
-	<!-- script src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script> -->
+	<!-- <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script> -->
 
 	<!-- Angular -->
 	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js'></script>
