Fixed the hello world demo

--- a/demos/hello-world/index.html
+++ b/demos/hello-world/index.html
@@ -51,12 +51,12 @@
 
 	<!-- Name Personalization Template -->
 	<script type="text/ng-template" id="name-personalization.html">
-            <h1>{{ "{{ experience.fullName " }}}}</h1>
+            <h1>{{ experience.fullName}}</h1>
         </script>
 
 	<!-- Helpful Links Header Template -->
 	<script type="text/ng-template" id="helpful-links-header.html">
-            <h1>Now that you have seen it {{ "{{ experience.fullName " }}}}, create an experience of your own!</h1>
+            <h1>Now that you have seen it {{ experience.fullName}}, create an experience of your own!</h1>
         </script>
 
 </body>
