Fixed the required options issues

--- a/demos/iphone-inline/index.html
+++ b/demos/iphone-inline/index.html
@@ -25,7 +25,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.6/angular-sanitize.min.js'></script>
 
     <!-- iphone-inline-video.browser.js -->
-    <script src="js/lib/iphone-inline-video.browser.js>"></script>
+    <script src="js/lib/iphone-inline-video.browser.js"></script>
 
     <!-- Angular iVXjs Library -->
     <script src="js/lib/angular.ivx.js"></script>
