Build Process Update
Updated the Build Process to version distributions

--- a/tools/deps/sandbox-init/index.html
+++ b/tools/deps/sandbox-init/index.html
@@ -3,6 +3,18 @@
 
 <head>
     <title>iVX.js Sandbox</title>
+
+    <!-- Below are the CSS dependencies for iVXjs's UI Modules. Depending on the module, comment 
+    in the module dependency you would like to use --> 
+
+    <!-- Bootstrap Dependency -->
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+
+    <!-- Semantic UI Dependency --> 
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.css">-->
+
+    <!-- Materialize CSS Dependency-->
+
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -33,8 +45,6 @@
     <!-- <script src="https://player.vimeo.com/api/player.js"></script> -->
 
 
-    <!-- Angular iVXjs Library -->
-    <script src="js/lib/angular.ivx.js"></script>
 
     <!-- Angular iVXjs Library minified -->
     <!--<script src="js/lib/angular.ivx.min.js"></script>-->
