Updated npm start and setup to use webpack

--- a/tools/snippets/index.html
+++ b/tools/snippets/index.html
@@ -137,7 +137,7 @@
 
 
     <!-- Angular iVXjs Library -->
-    <script src="js/angular.ivx.js"></script>
+    <script src="dev.bundle.js"></script>
 
     [DATA-SCRIPT] [VALIDATION-SCRIPT] [ANALYTIC-SCRIPT] [UI-SCRIPT]
 
