--- a/examples/send-ivx-io-events-to-analytics/index.html
+++ b/examples/send-ivx-io-events-to-analytics/index.html
@@ -7,6 +7,22 @@
         content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
         content="ie=edge">
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-KBG9R8N');</script>
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NXDS3SN');</script>
     <title ng-bind="pageTitle">Loading</title>
     <style>
         .show {
@@ -25,6 +41,7 @@
             0% {
                 opacity: 1
             }
+
             100% {
                 opacity: 0;
                 display: none;
@@ -36,6 +53,7 @@
             0% {
                 opacity: 1
             }
+
             100% {
                 opacity: 0;
                 display: none;
@@ -47,6 +65,7 @@
             0% {
                 opacity: 1
             }
+
             100% {
                 opacity: 0;
                 display: none;
@@ -58,6 +77,7 @@
             0% {
                 opacity: 1
             }
+
             100% {
                 opacity: 0;
                 display: none;
@@ -73,6 +93,7 @@
             0% {
                 opacity: 0
             }
+
             100% {
                 opacity: 1
             }
@@ -82,6 +103,7 @@
             0% {
                 opacity: 0
             }
+
             100% {
                 opacity: 1
             }
@@ -91,6 +113,7 @@
             0% {
                 opacity: 0
             }
+
             100% {
                 opacity: 1
             }
@@ -100,6 +123,7 @@
             0% {
                 opacity: 0
             }
+
             100% {
                 opacity: 1
             }
@@ -111,8 +135,19 @@
 <body set-up
     class="basic"
     ng-app="app">
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBG9R8N"
+            height="0"
+            width="0"
+            style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXDS3SNN"
+            height="0"
+            width="0"
+            style="display:none;visibility:hidden"></iframe>
+    </noscript>
     <div id="state-player"></div>
-    <button ivx-record-event="firing-analytics" class="ivx-inputs-button ivx-inputs-button-secondary">Record Event</button>
     <!-- <div id="ivx"></div> -->
 
     <!-- Angular iVXjs Dependencies -->
@@ -130,9 +165,9 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.6/angular-sanitize.min.js'></script>
 
     <script src="http://ivx-tools.dev.inf-env.com/ivx-experience/v1/ivx-experience.js"></script>
-    <script>
-            (function (i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        </script>
+
+    <ivx-actions-supports-rules></ivx-actions-supports-rules>
+    <ivx-analytics-google-tag-manager></ivx-analytics-google-tag-manager>
 
 
     <!-- Optional Video State Player Deps -->
