Fixed an error where time stamp was NaN

--- a/examples/ivx-io-experience/index.html
+++ b/examples/ivx-io-experience/index.html
@@ -111,9 +111,13 @@
 <body set-up
     class="basic"
     ng-app="app">
-    <div id="state-player"></div>
+    <div id="readout">
+        
+    </div>
+    <!-- <div id="state-player"></div> -->
     <button ivx-record-event="firing-analytics" class="ivx-inputs-button ivx-inputs-button-secondary">Record Event</button>
-    <!-- <div id="ivx"></div> -->
+
+    <div id="ivx"></div>
 
     <!-- Angular iVXjs Dependencies -->
 
