Loosened up Input Validation for iVXio Data Module

--- a/examples/ivx-io-experience/index.html
+++ b/examples/ivx-io-experience/index.html
@@ -117,7 +117,7 @@
     <!-- <div id="state-player"></div> -->
     <button ivx-record-event="firing-analytics" class="ivx-inputs-button ivx-inputs-button-secondary">Record Event</button>
 
-    <div id="ivx"></div>
+    <div id="state-player"></div>
 
     <!-- Angular iVXjs Dependencies -->
 
